<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logmail"
            android:hint="@string/email"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="20sp"
            android:textColor="@color/gris"
            android:textColorHint="@color/gris"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="20sp"
            android:id="@+id/logpass"
            android:textColor="@color/gris"
            android:textColorHint="@color/gris"/>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:layout_marginBottom="20sp"
            android:textColor="@color/colorBackground"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot"
                android:layout_marginLeft="60sp"
                android:textColor="@color/gris"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/aqui"
                android:textStyle="bold"
                android:textColor="@color/gris"
                android:id="@+id/tvClickAqui"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:layout_marginBottom="20sp"
            android:textColor="@color/gris"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnlogfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fb"/>
            <com.facebook.login.widget.LoginButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginfb"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30sp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="@string/nocuenta"
                android:textColor="@color/gris"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tvregister"
                android:text="@string/register"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:textColor="@color/gris"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
