<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="emanager.com.cityeye.Registro"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rusname"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/etnick"
            android:layout_marginTop="40dp"
            android:textColor="@color/gris"
            android:textColorHint="@color/gris"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rmail"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:id="@+id/etmail"
            android:textColor="@color/gris"
            android:textColorHint="@color/gris"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rpass"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:gravity="center"
            android:id="@+id/etpass"
            android:textColor="@color/gris"
            android:textColorHint="@color/gris"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rdoc"
            android:textAlignment="center"
            android:inputType="phone"
            android:gravity="center"
            android:id="@+id/etcc"
            android:textColor="@color/gris"
            android:textColorHint="@color/gris"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rcel"
            android:textAlignment="center"
            android:inputType="phone"
            android:gravity="center"
            android:id="@+id/etcel"
            android:textColor="@color/gris"
            android:textColorHint="@color/gris"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/regist"
            android:id="@+id/idregistra"
            android:textColor="@color/colorBackground"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cerrar"
            android:layout_marginTop="20dp"
            android:textColor="@color/color_cerrar"/>
    </LinearLayout>

</ScrollView>
